@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" dir="rtl">
 {% load static %}
+{% load rest_framework %}
 
 <head>
     <meta charset="utf-8">
@@ -19,7 +20,7 @@
 
 <body class="text-center">
     <!-- Form of sing up page -->
-    <form class="form-signup" method="POST" action="{% url 'signup' %}">
+    <form class="form-signup" method="POST" action="{% url 'signup' %}" enctype='application/json'>
         {% csrf_token %}
         <!-- Content of sign up page -->
         <div class="container mt-3">
@@ -39,7 +40,7 @@
                     <label for="first_name">نام</label>
                 </div>
                 <div class="col-md-4">
-                    <input type="text" id="first_name" name="first_name" required>
+                    <input type="text" id="first_name" name="first_name"  value="{{ serializer.data.first_name }}"required>
                     <small id="firstname-check-alert" class="form-text text-nowrap mt-2 text-md-left ml-3"
                         style="display: none;">
                         <i class="fas fa-exclamation-triangle"></i>
@@ -78,7 +79,7 @@
                     <label for="last_name">نام خانوادگی</label>
                 </div>
                 <div class="col-md-4">
-                    <input type="text" id="last_name" name="last_name" required>
+                    <input type="text" id="last_name" name="last_name"  value="{{ serializer.data.last_name }}" required>
                     <small id="lastname-check-alert" class="form-text text-nowrap mt-2 text-md-left ml-3"
                         style="display: none;">
                         <i class="fas fa-exclamation-triangle"></i>
@@ -92,7 +93,7 @@
                     <label for="username">نام کاربری</label>
                 </div>
                 <div class="col-md-4">
-                    <input type="text" id="username" name="username" required>
+                    <input type="text" id="username" name="username"  value="{{ serializer.data.username }}" required>
                     <small id="username-check-alert" class="form-text text-nowrap mt-2 text-md-left ml-3"
                         style="display: none;">
                         <i class="fas fa-exclamation-triangle"></i>
@@ -106,10 +107,10 @@
                     <label for="grade">پایه</label>
                 </div>
                 <div class="col-md-4">
-                    <select data-placeholder="پایه تحصیلی" id="grade" class="grade-choicen" tabindex="5" required>
+                    <select data-placeholder="پایه تحصیلی" name="grades[0]" class="grade-choicen" tabindex="5" required>
                         <option value="">پایه تحصیلی</option>
-                        {% for element in form.fields.grades.queryset %}
-                        <option value="{{ element.id }}">{{ element.title }}</option>
+                        {% for element in grades %}
+                        <option value="{{ element.code }}">{{ element.title }}</option>
                         {% endfor %}
                     </select>
 
@@ -123,7 +124,7 @@
                 <div class="phone-number-field col-md-4 ">
                     <!-- pattern check phone number is valid or not -->
                     <input type="text" class="phone-number" pattern="[9][0-9]{9}" id="phone-number" name="phone_number"
-                        required>
+                      value="{{ serializer.data.phone_number }}"  required>
                     <small id="username-check-alert" class="form-text text-nowrap mt-2 text-md-left ml-3 text-white">
                         <i class="fas fa-info-circle"></i>
                         شماره تلفن را بدون صفر وارد کنید . مثال : 9121111111
@@ -131,12 +132,15 @@
                 </div>
             </div>
             <button id="submit" class="btn btn-lg btn-warning btn-block sign-up-button" type="submit">ثبت نام</button>
-            {% if form.error %}
+    		{% for field in serializer %} 
+			{% if field.errors %}
+      		{% for error in field.errors %}
             <small id="error" class="h6 form-text text-nowrap mt-n3" style="font-weight: bolder;">
-                <i class="fas fa-exclamation-triangle"></i>
-                {{ form.error }}
-            </small>
-            {% endif %}
+                <i class="fas fa-exclamation-triangle">{{ error }}</i>
+            </small> 
+            {% endfor %}
+    		{% endif %}
+    		{% endfor %}
         </div>
     </form>
     {% block JSfile %}
